# automata-simulator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: binaries.yml  ci.yml  release.yml
automata_simulator/: __init__.py
automata_simulator/cli/: __init__.py  main.py
automata_simulator/core/: __init__.py
automata_simulator/core/algorithms/: __init__.py  cfg_to_pda.py  epsilon.py  minimize.py  pda_normalize.py  pda_to_cfg.py  state_elimination.py  subset_construction.py  thompson.py
automata_simulator/core/cfg/: __init__.py  grammar.py
automata_simulator/core/io/: __init__.py  dot_export.py  jflap.py  json_io.py
automata_simulator/core/models/: __init__.py  automaton.py  position.py  state.py  transition.py  types.py
automata_simulator/core/regex/: __init__.py  ast.py  formatter.py  parser.py
automata_simulator/core/simulators/: __init__.py  base.py  dfa.py  mealy.py  moore.py  nfa.py  pda.py  tm.py
automata_simulator/gui/: __init__.py  main.py  main_window.py  theme.py
automata_simulator/gui/canvas/: __init__.py  scene.py  scene_conversion.py  state_item.py  transition_item.py  undo_commands.py  view.py
automata_simulator/gui/dialogs/: __init__.py  algorithm_dialogs.py  batch_test_dialog.py
automata_simulator/gui/i18n/: __init__.py  translations.py  translator.py
automata_simulator/gui/panels/: __init__.py  library_panel.py  simulation_panel.py  stack_view.py  step_history.py  tape_view.py  test_presets.py
docs/: algorithms.md  api-algorithms.md  api-models.md  api-simulators.md  architecture.md  cli.md  index.md  usage.md
examples/: README.md  dfa_contains_abb.json  enfa_a_star_b_star.json  mealy_detect_101.json  moore_mod3.json  nfa_ends_in_abb.json  pda_a_n_b_n.json  tm_bit_inverter.json
packaging/: automata-sim.spec
scripts/: generate_examples.py
tests/: test_cli.py  test_smoke.py
tests/algorithms/: test_cfg_pda.py  test_epsilon.py  test_minimize.py  test_properties.py  test_regex.py  test_subset_construction.py
tests/core/: test_dfa_simulator.py  test_mealy_simulator.py  test_models.py  test_moore_simulator.py  test_nfa_simulator.py  test_pda_simulator.py  test_tm_simulator.py
tests/gui/: test_batch_test.py  test_canvas.py  test_dialogs.py  test_main_window.py  test_navigation.py  test_panels.py  test_simulation.py
tests/io/: test_dot_export.py  test_jflap.py  test_json_io.py
